svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    component: app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    component: app
